# tauri-react-big-template

./: .eslintrc.cjs  .prettierrc  .stylelintrc.json  LICENSE  README.md  package.json  vite.config.ts
.github/workflows/: deploy.yml
shared/: menus.json
shared/locales/en_gb/: translation.json
shared/locales/en_us/: translation.json
src/: App.module.css  App.test.tsx  App.tsx  PlatformContext.tsx  i18n.ts  main.tsx  setupTests.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/src/: commands.rs  main.rs  menu.rs  translation.rs  utils.rs
src/app/: constants.ts  menu.ts  store.ts  themes.ts  utils.ts
src/components/: AppMenu.tsx  MenuButton.module.css  MenuButton.tsx
src/components/mac/: MacTitleBar.tsx
src/components/windows/: WindowsControlIcons.tsx  WindowsControls.module.css  WindowsControls.tsx  WindowsMenuBar.module.css  WindowsMenuBar.tsx  WindowsMenuBarButtons.module.css  WindowsMenuBarButtons.tsx
src/contexts/: PlatformContext.tsx
src/features/config/: configSlice.ts
src/features/counter/: Counter.module.css  Counter.tsx
src/hooks/: useKeyboardShortcuts.ts  useTheme.ts
src/routes/: Error.module.css  Error.tsx  Home.module.css  Home.tsx  Settings.module.css  Settings.tsx
src/routes/settings/: AboutPage.module.css  AboutPage.tsx  AppearancePage.tsx  GeneralPage.module.css  GeneralPage.tsx  settings.module.css
